--- a/src/intel/Makefile.in
+++ b/src/intel/Makefile.in
@@ -305,7 +305,10 @@ TESTS = $(am__EXEEXT_1) $(check_PROGRAMS) $(am__EXEEXT_3)
 @HAVE_INTEL_VULKAN_TRUE@am__append_7 = vulkan/libvulkan-test.la
 @HAVE_INTEL_VULKAN_TRUE@am__append_8 = $(VULKAN_PER_GEN_LIBS) \
 @HAVE_INTEL_VULKAN_TRUE@	vulkan/libvulkan_common.la
-@HAVE_INTEL_VULKAN_TRUE@@HAVE_PLATFORM_ANDROID_TRUE@am__append_9 = $(ANDROID_CPPFLAGS)
+@HAVE_INTEL_VULKAN_TRUE@@HAVE_PLATFORM_ANDROID_TRUE@am__append_9 = \
+@HAVE_INTEL_VULKAN_TRUE@@HAVE_PLATFORM_ANDROID_TRUE@    $(ANDROID_CPPFLAGS) \
+@HAVE_INTEL_VULKAN_TRUE@@HAVE_PLATFORM_ANDROID_TRUE@    -DVK_USE_PLATFORM_ANDROID_KHR
+
 @HAVE_INTEL_VULKAN_TRUE@@HAVE_PLATFORM_ANDROID_TRUE@am__append_10 = $(ANDROID_CFLAGS)
 @HAVE_INTEL_VULKAN_TRUE@@HAVE_PLATFORM_ANDROID_TRUE@am__append_11 = $(ANDROID_LIBS)
 @HAVE_INTEL_VULKAN_TRUE@@HAVE_PLATFORM_ANDROID_TRUE@am__append_12 = $(VULKAN_ANDROID_FILES)
